--- a/sensors.yaml
+++ b/sensors.yaml
@@ -445,5 +445,26 @@
   name: "OctoPi Software Temp Limit"
   state_topic: "octopi/throttling"
   value_template: "{{value_json['softTempLimit']}}"
+- platform: template
+  sensors:
+    - octoprint_time_elapsed_friendly:
+       friendly_name: "Octoprint time elapsed"
+       value_template: "{{ states('sensor.sensor.octoprint_time_elapsed') | int | timestamp_custom('%H:%M:%S', 0) }}"
+     - octoprint_time_remaining_friendly:
+       friendly_name: "Octoprint time remaining"    
+       value_template: >-
+         {% set etime = states.sensor.octoprint_time_remaining.state | int %}
+         {% set seconds = etime % 60 %}
+         {% set minutes = ((etime % 3600) / 60) | int %}
+         {% set hours = ((etime % 86400) / 3600) | int %}
+         {% set days = (etime / 86400) | int %}
+         {%- if days > 0 -%}
+           {%- if days == 1 -%}
+             1 day
+           {%- else -%}
+             {{ days }} days
+           {%- endif -%}
+           {{ ', ' }}
+         {%- endif -%}
 
 
