--- a/sensors.yaml
+++ b/sensors.yaml
@@ -447,12 +447,12 @@
   value_template: "{{value_json['softTempLimit']}}"
 - platform: template
   sensors:
-    - octoprint_time_elapsed_friendly:
-        friendly_name: "Octoprint time elapsed"
-        value_template: "{{ states('sensor.sensor.octoprint_time_elapsed') | int | timestamp_custom('%H:%M:%S', 0) }}"
-    - octoprint_time_remaining_friendly:
-        friendly_name: "Octoprint time remaining"    
-        value_template: >-
+    octoprint_time_elapsed_friendly:
+      friendly_name: Octoprint time elapsed
+      value_template: "{{ states('sensor.sensor.octoprint_time_elapsed') | int | timestamp_custom('%H:%M:%S', 0) }}"
+    octoprint_time_remaining_friendly:
+      friendly_name: "Octoprint time remaining"    
+      value_template: >
          {% set etime = states.sensor.octoprint_time_remaining.state | int %}
          {% set seconds = etime % 60 %}
          {% set minutes = ((etime % 3600) / 60) | int %}
