--- a/sensors.yaml
+++ b/sensors.yaml
@@ -449,7 +449,7 @@
   sensors:
     octoprint_time_elapsed_friendly:
       friendly_name: Octoprint time elapsed
-      value_template: "{{ states('sensor.sensor.octoprint_time_elapsed') | int | timestamp_custom('%H:%M:%S', 0) }}"
+      value_template: "{{ states('sensor.octoprint_time_elapsed') | int | timestamp_custom('%H:%M:%S', 0) }}"
     octoprint_time_remaining_friendly:
       friendly_name: "Octoprint time remaining"    
       value_template: >
