--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -520,10 +520,10 @@ views:
           title: Current Print
           show_header_toggle: false
           entities:
-            - sensor.octoprint_job_percentage
-            - sensor.octoprint_time_elapsed_friendly
+            - entity: sensor.octoprint_job_percentage
+            - entity: sensor.octoprint_time_elapsed_friendly
               icon: mdi:clock-start
-            - sensor.octoprint_time_remaining_friendly	
+            - entity: sensor.octoprint_time_remaining_friendly	
               icon: mdi:clock-end
 
     
