--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,527 +1,2 @@
 title: Home
-
-views:
-  - path: default_view
-    title: Home
-    icon: 'mdi:home'
-    badges: []
-    cards:
-      - type: vertical-stack
-        cards:
-        - type: horizontal-stack
-          cards:
-            - type: custom:vertical-style-card
-              title: Location
-              style:
-                font_size: 24px
-                border: true
-              cards:
-                - type: horizontal-stack
-                  cards:
-                  - type: picture-glance
-                    entities:
-                      - person.sarah
-                      - sensor.sarah_phone
-                    state_image: 
-                      "home": /local/images/sarah.jpg
-                      "not_home": /local/images/sarah_away.jpg
-                      "Work": /local/images/sarah_away.jpg
-                    entity: person.sarah
-                    state_filter:
-                      "not_home": grayscale(72%)
-                  - type: picture-glance
-                    entities:
-                      - person.scott
-                      - sensor.scott_phone
-                    state_image: 
-                      "home": /local/images/scott.jpg
-                      "not_home": /local/images/scott_away.jpg
-                    entity: person.scott
-                    state_filter:
-                      "not_home": grayscale(72%)
-        - type: custom:simple-weather-card
-          entity: weather.dark_sky
-          secondary_info: humidity
-        - type: horizontal-stack
-          cards:
-          - type: custom:mini-graph-card
-            name: Sun Elevation
-            entities:
-            - sensor.sun_elevation
-            align_icon: left
-            align_header: left
-            line_color: '#f5f242'
-            line_width: 4
-          - type: custom:mini-graph-card
-            name: Chance of Rain
-            entities:
-            - sensor.dark_sky_precip_probability_0h
-            line_width: 4
-            line_color: '#2980b9'
-            align_icon: left
-            align_header: left
-      - type: vertical-stack
-        cards:
-        - type: horizontal-stack
-          cards:
-          - type: custom:button-card 
-            icon: mdi:washing-machine
-            show_state: true
-            show_name: false
-            tap_action:
-             action: call-service
-             service: script.turn_washer_idle
-            entity: sensor.washer_state
-            state:
-            - value: "Idle"
-              color: rgb(245, 245, 245)
-            - value: "unknown"
-              color: rgb(245, 245, 245)
-            - value: "Running"
-              color: rgb(35, 63, 166)
-            - value: "Finishing"
-              color: rgb(35, 63, 166)
-            - value: "Clean"
-              color: rgb(117, 189, 111)
-          - type: custom:button-card
-            icon: mdi:tumble-dryer
-            show_state: true 
-            show_name: false
-            entity: sensor.dryer_state
-            state:
-            - value: "Idle"
-              color: rgb(245, 245, 245)
-            - value: "unknown"
-              color: rgb(245, 245, 245)
-            - value: "Running"
-              color: rgb(35, 63, 166)
-            - value: "Finishing"
-              color: rgb(35, 63, 166)
-            - value: "Done"
-              color: rgb(117, 189, 111)
-          - type: custom:button-card
-            icon: mdi:lock
-            show_state: true 
-            show_name: false
-            entity: lock.front_door
-            tap_action: 
-              action: toggle
-            state:
-             - value: "locked"
-               color: rgb(117, 189, 111)
-             - value: "unlocked"
-               color: rgb(117,35,35)
-          - type: custom:button-card
-            icon: mdi:television
-            show_state: true 
-            show_name: false
-            entity: media_player.vizio_smartcast
-            tap_action: 
-              action: toggle
-            state:
-            - value: "on"
-              color: rgb(117, 189, 111)
-        - type: horizontal-stack
-          cards:
-          - type: custom:vertical-style-card
-            title: Light Control
-            style:
-              font_size: 24px
-              border: true
-            cards:
-              - type: vertical-stack
-                cards:
-                - type: horizontal-stack
-                  cards:
-                  - type: custom:button-card 
-                    icon: mdi:lightbulb
-                    entity: light.living_room_main_lights
-                    name: Living Room
-                    tap_action:
-                      action: call-service
-                      service: light.toggle
-                      service_data:
-                        entity_id: light.living_room_main_lights
-                  - type: custom:button-card 
-                    icon: mdi:lightbulb
-                    entity: light.dining_room_chandelier
-                    name: Dining Room
-                    tap_action:
-                      action: call-service
-                      service: light.toggle
-                      service_data:
-                        entity_id: light.dining_room_chandelier
-                  - type: custom:button-card 
-                    icon: mdi:lightbulb
-                    entity: light.bedroom
-                    tap_action:
-                      action: call-service
-                      service: light.toggle
-                      service_data:
-                        entity_id: light.bedroom
-                  - type: custom:button-card 
-                    icon: mdi:lightbulb
-                    entity: light.outside
-                    tap_action:
-                      action: call-service
-                      service: light.toggle
-                      service_data:
-                        entity_id: light.outside
-        - type: vertical-stack
-          cards:
-            - type: custom:mini-media-player
-              entity: media_player.plex_plex_for_vizio
-            - type: custom:mini-media-player
-              entity: media_player.vizio_smartcast
-      - type: custom:mini-graph-card
-        name: Washing Machine Daily Cost
-        entities:
-        - entity: sensor.washer_cost_daily
-        hours_to_show: 168
-        aggregate_func: max
-        points_per_hour: 0.04
-        show:
-          graph: bar
-      - type: custom:mini-graph-card
-        name: 3D Printer Daily Cost
-        entities:
-        - entity: sensor.printer_cost_daily
-        hours_to_show: 168
-        aggregate_func: max
-        points_per_hour: 0.04
-        show:
-          graph: bar
-  - path: living
-    title: Living Room
-    icon: 'mdi:sofa'
-    panel: true
-    badges: []
-    cards:
-    - type: custom:layout-card
-      layout: horizontal
-      cards:
-      - type: light
-        entity: light.living_room
-        name: Lamp
-      - type: light
-        entity: light.living_room_main_lights
-        name: Main Lights
-      - type: light
-        entity: light.dining_room_chandelier
-        name: Dining Room
-      - type: "custom:vertical-style-card"
-        title: Living Room Media
-        style:
-          font_size: 24px
-          border: true
-        cards:
-          - type: custom:mini-media-player
-            entity: media_player.living_room_speaker
-            hide: 
-              power: true
-          - type: custom:mini-media-player
-            entity: media_player.vizio_smartcast
-            source: full
-            hide:
-              volume: true
-              controls: true
-          - type: custom:mini-media-player
-            entity: media_player.plex_none
-            artwork: cover
-            info: scroll
-            hide:
-              volume: true
-              controls: true
-              power: true
-  - path: bedroom
-    title: Bedroom
-    icon: 'mdi:hotel'
-    badges: []
-    panel: true
-    cards:
-    - type: custom:layout-card
-      layout: horizontal
-      cards:
-      - type: custom:vertical-style-card
-        cards: 
-        - type: horizontal-stack
-          cards:
-          - type: light
-            entity: light.bedroom_1
-          - type: light
-            entity: light.hue_color_lamp_1
-            name: Bedroom 2
-      - type: custom:mini-graph-card
-        name: Bedroom Temperature
-        entities:
-          - sensor.bedroom_temperature
-        line_width: 4
-        line_color: '#2980b9'
-        align_icon: left
-        align_header: left
-      - type: "custom:vertical-style-card"
-        title: Bedroom Media
-        style:
-          font_size: 24px
-          border: true
-        cards:
-        - type: "custom:mini-media-player"
-          entity: media_player.bedroom_mini
-        - type: "custom:mini-media-player"
-          entity: media_player.bedroom
-      - type: custom:vertical-style-card
-        title: Morning Routine
-        style:
-          font_size: 24px
-          border: true
-        cards:
-        - type: entities
-          entities:
-          - input_boolean.wakeup
-          - input_boolean.wakeup_weekends
-  - path: system
-    title: System
-    icon: 'mdi:laptop'
-    panel: true
-    badges: []
-    cards:
-      - type: custom:layout-card
-        layout: vertical
-        cards:
-        - type: custom:vertical-style-card
-          cards:
-          - type: custom:mini-graph-card
-            entities: 
-            - sensor.processor_use
-            line_width: 4
-            line_color: '#2980b9'
-            align_icon: left
-            align_header: left
-          - type: "custom:bar-card"
-            entity: sensor.memory_use_percent
-            title: RAM
-            title_position: inside
-            align: split
-            show_icon: true
-            positions:
-              icon: outside
-          - type: "custom:bar-card"
-            entity: sensor.disk_use_percent
-            title: HDD
-            title_position: inside  
-            align: split
-            show_icon: true
-            color: '#00ba6a'
-            positions:
-              icon: outside
-        - type: entities
-          entities:
-          - sensor.last_boot
-        - type: custom:mini-graph-card
-          name: CPU Temperature
-          entities:
-            - sensor.cpu_temperature
-          line_width: 4
-          line_color: '#2980b9'
-          align_icon: left
-          align_header: left
-          hours_to_show: 72
-        - break
-        - type: horizontal-stack
-          cards:
-          - type: custom:mini-graph-card
-            name: Download
-            entities:
-              -  sensor.fast_com_download
-            line_width: 4
-            line_color: '#2980b9'
-            align_icon: left
-            align_header: left
-            hours_to_show: 72
-        - type: custom:vertical-style-card
-          title: Pi-Hole
-          cards:
-          - type: horizontal-stack
-            cards:
-              - type: custom:mini-graph-card
-                entities:
-                  - sensor.pi_hole_ads_blocked_today
-                name: Ads Blocked Today
-                hours_to_show: 24
-                line_width: 4
-              - type: custom:mini-graph-card
-                entities:
-                  - sensor.pi_hole_ads_percentage_blocked_today
-                name: Percentage Blocked
-                hours_to_show: 24
-                line_width: 4
-          - type: vertical-stack
-            cards:
-              - type: custom:bar-card
-                entity: sensor.pi_hole_dns_queries_today
-                title: DNS Queries Today
-                title_position: inside
-                align: split
-                show_icon: true 
-                max: '50000'
-              - type: custom:bar-card
-                entity: sensor.pi_hole_domains_blocked
-                title: Domains Blocked
-                title_position: inside
-                align: split
-                show_icon: true 
-                max: '2000000'
-                icon: mdi:cancel 
-        - break
-        - type: custom:auto-entities
-          card:
-            type: entities
-            title: Things that are broken
-            show_header_toggle: false               
-          filter:
-            include:
-              - state: "unknown"
-            exclude:
-              - entity_id: group.*
-              - entity_id: sensor.tilt_angle_158d0002b7ba92
-              - entity_id: sensor.bed_activity_158d0002b7ba92
-              - entity_id: sensor.coordination_158d0002b7ba92
-              - entity_id: sensor.dryer_start_stop
-        - type: custom:auto-entities
-          show_empty: false
-          card:
-            type: glance
-            title: Low Battery Devices
-            show_header_toggle: false 
-          filter:
-            include:
-              - entity_id: "*battery_level*"
-                state: '< 25'
-              - attributes:
-                  battery: '< 25'
-              - attributes:
-                  battery_level: '< 25'
-        - type: custom:auto-entities
-          show_empty: false
-          card:  
-            title: Home Assistant Update Available
-            type: glance
-            show_header_toggle: false
-          filter:
-            include: 
-              - entity_id: binary_sensor.updator
-                state: 'available'
-  - path: auto
-    title: Automations
-    icon: 'mdi:auto-fix'
-    badges: []
-    cards:
-      - type: custom:auto-entities
-        card: 
-          type: entities
-          title: Lights Automations
-          show_header_toggle: false
-        filter: 
-          include:
-          - entity_id: automation.*light*
-      - type: custom:auto-entities
-        card: 
-          type: entities
-          title: Christmas Automations
-          show_header_toggle: true
-        filter: 
-          include:
-          - entity_id: automation.*christmas*
-      - type: custom:auto-entities
-        card: 
-          type: entities
-          title: House Automations
-          show_header_toggle: false
-        filter: 
-          include:
-          - entity_id: automation.*door*
-          - entity_id: automation.set_washing_machine*
-          - entity_id: automation.set_dryer*
-      - type: custom:auto-entities
-        card: 
-          type: entities
-          title: Calendar Automations
-          show_header_toggle: false
-        filter: 
-          include:
-          - entity_id: automation.calendar*
-      - type: custom:auto-entities
-        card: 
-          type: entities
-          title: Presence Detection
-          show_header_toggle: false
-        filter: 
-          include:
-          - entity_id: automation.mark_person*
-          - entity_id: automation.*extended_away
-          - entity_id: automation.turn_on_automations*
-      - type: custom:auto-entities
-        card: 
-          type: entities
-          title: Notifications
-          show_header_toggle: false
-        filter: 
-          include:
-          - entity_id: automation.*alert*
-          - entity_id: automation.*telegram*
-  - path: printer
-    title: 3D Printer
-    icon: 'mdi:printer-3d'
-    badges: []
-    cards:
-      - type: vertical-stack
-        cards:
-        - type: horizontal-stack
-          cards:
-            - type: picture-entity
-              entity: camera.octoprint
-              camera_view: live 
-              show_state: false
-        - type: horizontal-stack
-          cards:
-          - type: custom:mini-graph-card
-            name: Hot End Temperature
-            entities:
-            - sensor.octoprint_actual_tool0_temp
-            align_icon: left
-            align_header: left
-            line_color: '#f5f242'
-            line_width: 4
-          - type: custom:mini-graph-card
-            name: Bed Temperature
-            entities:
-            - sensor.octoprint_actual_bed_temp
-            line_width: 4
-            line_color: '#2980b9'
-            align_icon: left
-            align_header: left
-      - type: vertical-stack
-        cards:
-        - type: horizontal-stack
-          cards:
-          - type: custom:button-card 
-            icon: mdi:printer-3d
-            show_state: true
-            show_name: false
-            entity: sensor.octoprint_current_state
-            state:
-            - value: "Operational"
-              color: rgb(245, 245, 245)
-            - value: "Unknown"
-              color: rgb(245, 245, 245)
-            - value: "Printing"
-              color: rgb(117, 189, 111)
-        - type: entities
-          title: Current Print
-          show_header_toggle: false
-          entities:
-            - entity: sensor.octoprint_job_percentage
-            - entity: sensor.octoprint_time_elapsed_friendly
-              icon: mdi:clock-start
-            - entity: sensor.octoprint_time_remaining_friendly
-              icon: mdi:clock-end
+views: !include_dir_merge_list lovelace/views/
