--- a/.github/workflows/HomeAssistant.yml
+++ b/.github/workflows/HomeAssistant.yml
@@ -13,8 +13,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Copy stub files into configuration folder
         run: |
-          cp .stubs/secrets.yaml secrets.yaml
-          cp .stubs/google_token.json google_token.json
+          cp .stubs/secrets_CI.yaml secrets.yaml
       - name: Home Assistant Version
         uses: "docker://homeassistant/home-assistant:stable"
         with:
