--- a/.stubs/secrets_CI.yaml
+++ b/.stubs/secrets_CI.yaml
@@ -1,4 +1,3 @@
-
 # stub password file for CI
 some_password: welcome
 
@@ -21,10 +20,7 @@ life360_password: password
 telegram_api: token
 sarah_chat: id
 
-
 #badnest
-
-
 badnest_issue_token: token
 badnest_cookie: cookie
 
@@ -32,5 +28,6 @@ badnest_cookie: cookie
 google_cal_client_id: id
 google_cal_client_secret: secret token
 
-octoprint_api_key: apitoken
+octoprint_api_key: api_key
 
+pi_hole_api_key: api_key
