--- a/.stubs/secrets_CI.yaml
+++ b/.stubs/secrets_CI.yaml
@@ -11,14 +11,14 @@ longitude: 0.0
 
 darksky_api: token
 
-august_username: 'username'
+august_username: '+5551234567'
 august_password: password
 
-life360_username: 'username'
+life360_username: '+5551234567'
 life360_password: password
 
 telegram_api: token
-sarah_chat: id
+sarah_chat: 1234
 
 # badnest
 badnest_issue_token: token
