--- a/automation/automation-notifications.yaml
+++ b/automation/automation-notifications.yaml
@@ -1,3 +1,5 @@
+---
+
 - alias: Send alert to google home when washing machine is finished
   trigger:
     - platform: state
@@ -106,60 +108,15 @@
         {% elif is_state('sensor.sarah_status', 'Home') %}
            notify.telegram_sarah
         {% elif is_state('sensor.scott_status', 'Home') %}
-          
         {% endif %}
       data_template:
         message: 'Hey, the washing machine has finished and is ready to be emptied'
         data:
           inline_keyboard:
-          - '30 Minutes:/30m, 1 Hour:/1h, already empty:/empty_washer'
-          - 'No reminder:/removekeyboard'
-- alias: Send alert to phones when dryer has not been emptied
-  trigger:
-    - platform: state
-      entity_id: sensor.dryer_state
-      to: Done
-      for:
-        minutes: 10
-    - platform: state
-      entity_id: sensor.sarah_status
-      to: 'Home'
-      for:
-        minutes: 10
-    - platform: state
-      entity_id: sensor.scott_status
-      to: 'Home'
-      for:
-        minutes: 10
-  condition:
-    condition: and
-    conditions:
-      - condition: time
-        before: '22:00:00'
-        after: '09:00:00'
-      - condition: state
-        entity_id: group.family
-        state: 'home'
-      - condition: state
-        entity_id: sensor.dryer_state
-        state: Done
-  action:
-    - service_template: >
-        {% if (is_state('sensor.sarah_status', 'Home')) and (is_state('sensor.scott_status', 'Home'))  %}
-           notify.telegram_sarah
-        {% elif is_state('sensor.sarah_status', 'Home') %}
-           notify.telegram_sarah
-        {% elif is_state('sensor.scott_status', 'Home') %}
-          
-        {% endif %}
-      data_template:
-        message: 'Hey, the dryer has finished and is ready to be emptied'
-        data:
-          inline_keyboard:
-          - '30 Minutes:/30mdryer, 1 Hour:/1hdryer, already empty:/empty_dryer'
-          - 'No reminder:/removekeyboard'
+            - '30 Minutes:/30m, 1 Hour:/1h, already empty:/empty_washer'
+            - 'No reminder:/removekeyboard'
 - alias: Send alert to Sarahs phone when outside lights turn on
-  initial_state: 'off'
+  initial_state: false
   trigger:
     platform: state
     entity_id: light.outside
@@ -170,7 +127,7 @@
       data_template:
         message: 'Hey the outside light just turned on'
 - alias: Send alert to Sarahs phone when outside lights turn off
-  initial_state: 'off'
+  initial_state: false
   trigger:
     platform: state
     entity_id: light.outside
@@ -185,20 +142,20 @@
     platform: time
     at: "06:40:00"
   condition:
-  - condition: template
-    value_template: "{{ states.sensor.dark_sky_temperature.state | float < 2 }}"
-  - condition: or
-    conditions:
-      - condition: time
-        weekday:          
-          - mon
-          - tue
-          - wed
-          - thu
-          - fri
-      - condition: state
-        entity_id: calendar.off_work
-        state: 'on'
+    - condition: template
+      value_template: "{{ states.sensor.dark_sky_temperature.state | float < 2 }}"
+    - condition: or
+      conditions:
+        - condition: time
+          weekday:          
+            - mon
+            - tue
+            - wed
+            - thu
+            - fri
+        - condition: state
+          entity_id: calendar.off_work
+          state: 'on'
   action:
     - service: tts.google_say
       entity_id: media_player.living_room_speaker
@@ -208,11 +165,11 @@
 - alias: Send alert to Sarah's phone when house temperature is below 18
   description: ''
   trigger:
-  - platform: template
-    value_template: '{{ states.climate.kitchen_thermostat.attributes.current_temperature
-      <= 18 }}'
+    - platform: template
+      value_template: '{{ states.climate.kitchen_thermostat.attributes.current_temperature
+        <= 18 }}'
   condition: []
   action:
-  - data:
-      message: The kitchen thermostat temperature is below 18
-    service: notify.telegram_sarah
+    - data:
+        message: The kitchen thermostat temperature is below 18
+      service: notify.telegram_sarah
