--- a/lovelace/views/03_printer.yaml
+++ b/lovelace/views/03_printer.yaml
@@ -7,7 +7,7 @@
   cards:
     - type: vertical-stack
       cards:
-        - type: hortizontal-stack
+        - type: horizontal-stack
           cards:
             - type: picture-entity
               entity: camera.octoprint
