--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
 # Example .gitignore file for your config dir.
 # An * ensures that everything will be ignored.
-*
 
-# You can whitelist files/folders with !, these will not be ignored.
-!*.yaml
-!.gitignore
-!*.md
-!automation
-!lovelace
-!lovelace/resources
-!lovelace/views
-!.stubs
-!.yamllint
-!custom_components/badnest
 
 # Ignore folders.
 .storage
@@ -23,3 +11,5 @@
 ip_bans.yaml
 secrets.yaml
 known_devices.yaml
+.vscode/settings.json
+gbridge config.PNG
