--- a/entities/weather/darksky.yaml
+++ b/entities/weather/darksky.yaml
@@ -5,5 +5,5 @@
 # https://www.home-assistant.io/integrations/weather.darksky/
 #
 platform: darksky
-api_key: !secret darksky_api_key
+api_key: !secret darksky_api
 mode: daily
