--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 .cloud
 .google.token
 custom_components/hacs
-custom_components/node_red
+custom_components/node_red/
+old_storage
 www
 ssl
 hydro_rates
@@ -20,6 +21,6 @@ known_devices.yaml
 .vscode/settings.json
 gbridge config.PNG
 hacs.json
-august.conf
+.august.conf
 home-assistant.log
 home-assistant_v2.db
