--- a/integrations/automation.yaml
+++ b/integrations/automation.yaml
@@ -1,3 +1,7 @@
 ---
-
-automation: !include_dir_merge_list automation/
+# This handles the loading of my automations
+#
+# https://www.home-assistant.io/docs/automation/
+#
+automation: !include ../automations.yaml
+automation split: !include_dir_list ../automations
