--- a/automations/lights/outside/turn_off_at_sunrise.yaml
+++ b/automations/lights/outside/turn_off_at_sunrise.yaml
@@ -3,7 +3,7 @@ alias: Turn off outside lights at sunrise
 trigger:
   - platform: sun
     event: sunrise
-    offset: "-00:05:00"
+   # offset: "-00:05:00"
 condition: []
 action:
   service: homeassistant.turn_off
