Lovelace - UI update and file restructuring  (#3)
* Update 05_test.yaml

* Update 05_test.yaml

* Update 05_test.yaml

* Update configuration.yaml

* add a header

* theme change

* linting

* maybe?

* Update 05_test.yaml

* lint

* Update google_dark.yaml

* default theme

* resources

* Update resources.yaml

* decluttering

* trying something

* typo

* Update 05_test.yaml

* more

* decluttering

* move rooms

* Update configuration.yaml

* Update 01_living_room.yaml

* room gen

* update

* try

* try again

* naming

* add a room

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* Update room_gen.yaml

* a

* Update room_gen.yaml

* move stuff

* room_gen

* Update gen_room.yaml

* Update gen_room.yaml

* Update configuration.yaml

* Update configuration.yaml

* try dis

* Update gen_room.yaml

* Update gen_room.yaml

* more rooms

* Update garage_lights.yaml

* fix lights

* Update front_door_lights.yaml

* Update front_door_lights.yaml

* Create front_door.yaml

* lint

* Delete front_door.yaml

* Update light.yaml

* more stuff

* Update 02_system.yaml

* Update gen_room.yaml

* check old stuff

* Update 02_system.yaml

* Update 02_system.yaml

* Update 02_system.yaml

* Update 02_system.yaml

* Update 02_system.yaml

* most used update

* Update 03_dining_room.yaml

* Update 02_system.yaml

* Update hk_button.yaml

* Update resources.yaml

* Update resources.yaml

* try this

* Update recap.yaml

* Update light.yaml

* Update 03_dining_room.yaml

* lint

* Update recap.yaml

* Update recap.yaml

* Update recap.yaml

* add spaces

* Update recap.yaml

* spacing

* Update recap.yaml

* printer

* Update 07_printer.yaml

* rename

* disable

*

--- a/automations/system/startup.yaml
+++ b/automations/system/startup.yaml
@@ -4,9 +4,9 @@ trigger:
   - platform: homeassistant
     event: start
 action:
-  # - service: frontend.set_theme
-  #   data:
-  #     name: Dark - Blue
+  - service: frontend.set_theme
+    data:
+      name: Google Dark Theme
   - service: mqtt.publish
     data:
       topic: hass/state/dryer
