--- a/.github/workflows/HomeAssistant.yml
+++ b/.github/workflows/HomeAssistant.yml
@@ -43,3 +43,21 @@ jobs:
         uses: "docker://homeassistant/home-assistant:stable"
         with:
           args: python -m homeassistant --config . --script check_config --info all
+  home_assistant_beta:
+      runs-on: ubuntu-latest
+      needs: [yamllint, remarklint]
+      steps:
+        - name: Getting your configuration from GitHub
+          uses: actions/checkout@v2.3.3
+        - name: Copy stub files into configuration folder
+          run: |
+            cp .stubs/secrets_CI.yaml secrets.yaml
+        - name: Home Assistant Version
+          uses: "docker://homeassistant/home-assistant:beta"
+          with:
+            args: |
+              python -m homeassistant --version
+        - name: Home Assistant Check
+          uses: "docker://homeassistant/home-assistant:beta"
+          with:
+            args: python -m homeassistant --config . --script check_config --info all
