--- a/lovelace/resources/resources.yaml
+++ b/lovelace/resources/resources.yaml
@@ -18,3 +18,9 @@
   type: module
 - url: /hacsfiles/surveillance-card/surveillance-card.js
   type: module
+- url: /hacsfiles/lovelace-card-mod/card-mod.js
+  type: module
+- url: /hacsfiles/decluttering-card/decluttering-card.js
+  type: module
+- url: /hacsfiles/custom-header/custom-header.js
+  type: module
