--- a/lovelace/includes/grid_script.yaml
+++ b/lovelace/includes/grid_script.yaml
@@ -9,13 +9,18 @@ card:
   column_width: 33.333%
   cards:
   {% for button in entities %}
-    
+
     - type: custom:decluttering-card
-      template: "hk_button_service"
+    {% if button.name == "Ghost Cam" %}
+      template: "hk_button_ghost_cam"
+    {% elif button.name == "Fabricator" %}
+      template: "hk_button_printer"
+    {% else %}
+      template: "hk_button"
+    {% endif %}
       variables:
         - entity_id: {{ button.entity_id }}
         - name: {{ button.name }}
-        - service: {{ button.script }}
   {% endfor %}
 style: |
   ha-card {
