--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -24,6 +24,6 @@ jobs:
         run: |
           git config --global user.email "sarahcaitlinboyd@gmail.com"
           git config --global user.name "Readme Bot"
-          git add readme.md
+          git add README.md
           git commit -m 'docs: update readme' || exit 0
           git push
