--- a/lovelace/views/01_home.yaml
+++ b/lovelace/views/01_home.yaml
@@ -59,6 +59,30 @@
                   - entity_id: {{ s.entity_id }}
               {% endfor %}
     {% endif %}
+    {% if _global.home.media %}
+    - type: vertical-stack
+      cards:
+        - !include
+          - ../includes/section.yaml
+          - title: Living Room Media
+        - type: vertical-stack
+          cards:
+            - type: custom:mod-card
+              card:
+                type: custom:layout-card
+                layout: horizontal
+                min_columns: 3
+                justify_content: start
+                cards:
+                  {% for media in _global.home.media %}
+                  - type: custom:decluttering-card
+                    template: "hk_simple_link_media"
+                    variables:
+                      - name: {{ media.name }}
+                      - service: {{ media.service }}
+                      - image: {{media.image}}
+                  {% endfor %}
+    {% endif %}
     {% if _global.home.most_used %}
     - type: vertical-stack
       cards:
