updates to vacation automations

--- a/automations/calendar/vacation_disable.yaml
+++ b/automations/calendar/vacation_disable.yaml
@@ -1,14 +1,22 @@
 ---
 alias: Calendar - Turn off automations when on vacation
 trigger:
-  platform: state
-  entity_id: calendar.vacation
-  from: "off"
-  to: "on"
-condition:
-  - condition: state
+  - platform: state
+    entity_id: calendar.vacation
+    from: "off"
+    to: "on"
+  - platform: state
     entity_id: input_boolean.ghost_home
-    state: "false"
+    from: "on"
+    to: "off"
+condition:
+  - condition: and
+    conditions:
+      - condition:
+        entity_id: input_boolean.ghost_home
+        state: "false"
+      - condition: entity_id: calendar.vacation
+        state: "on"
 action:
   - service: automation.turn_off
     entity_id: automation.turn_radio_on_when_everyone_is_away
