--- a/automations/climate/climate_proximity.yaml
+++ b/automations/climate/climate_proximity.yaml
@@ -23,8 +23,8 @@ action:
       hvac_mode: >
         {% if states('sensor.season') == 'summer' %}
           cool
-        {% elif states('sensor.season') == 'spring' or states('sensor.season') == 'autumn' %}
+        {% elif states('sensor.season') == 'winter' or states('sensor.season') == 'autumn' %}
           auto
         {% else %}
-          heat
+          auto
         {% endif %}
