--- a/lovelace/views/01_home.yaml
+++ b/lovelace/views/01_home.yaml
@@ -98,6 +98,9 @@
                 {% if e.name %}
                 name: {{ e.name }}
                 {% endif %}
+                {% if e.service %}
+                service: {{ e.service }}
+                {% endif %}
             {% endfor %}
     {% endif %}
     - type: vertical-stack
