--- a/lovelace/decluttering_templates/hk_button script.yaml
+++ b/lovelace/decluttering_templates/hk_button script.yaml
@@ -9,7 +9,7 @@ hk_button_script:
     aspect_ratio: "[[aspect_ratio]]"
     tap_action:
       action: call-service
-      service: "[[service]]"
+      service: "[[script]]"
     styles:
       grid:
         - grid-template-areas: '"i" "n" "s"'
