--- a/scripts/launch_prime.yaml
+++ b/scripts/launch_prime.yaml
@@ -6,13 +6,13 @@ launch_prime:
     - choose:
         - conditions:
             - condition: state
-              entity_id: media_player.vizio_smartcast
+              entity_id: media_player.living_room_chromecast
               state: 'off'
           sequence:
             - service: media_player.turn_on
               data:
-                entity_id: media_player.vizio_smartcast
+                entity_id: media_player.living_room_chromecast
     - service: media_player.select_source
       data:
-        entity_id: media_player.vizio_smartcast
+        entity_id: media_player.living_room_chromecast
         source: Prime Video
