--- a/lovelace/decluttering_templates/hk_button_globe_1.yaml
+++ b/lovelace/decluttering_templates/hk_button_globe_1.yaml
@@ -29,7 +29,7 @@ hk_button_globe_1:
       icon:
         - color: var(--button-card-light-color)
     state:
-      - value: 'off'
+      - value: 'OFF'
         styles:
           card:
             - filter: opacity(50%)
