--- a/entities/sensors/mqtt/plugs/globe_plug_2_power.yaml
+++ b/entities/sensors/mqtt/plugs/globe_plug_2_power.yaml
@@ -4,3 +4,6 @@ platform: mqtt
 name: "Globe Plug 2 Power"
 state_topic: "stat/globeplug2/POWER"
 icon: mdi:power-socket-us
+availability_topic: "tele/globeplug2/LWT"
+payload_available: "Online"
+payload_not_available: "Offline"
