--- a/entities/sensors/mqtt/plugs/globe_plug_3_power.yaml
+++ b/entities/sensors/mqtt/plugs/globe_plug_3_power.yaml
@@ -4,3 +4,6 @@ platform: mqtt
 name: "Globe Plug 3 Power"
 state_topic: "stat/globeplug3/POWER"
 icon: mdi:power-socket-us
+availability_topic: "tele/globeplug3/LWT"
+payload_available: "Online"
+payload_not_available: "Offline"
