--- a/entities/sensors/mqtt/plugs/globe_plug_4_power.yaml
+++ b/entities/sensors/mqtt/plugs/globe_plug_4_power.yaml
@@ -4,3 +4,6 @@ platform: mqtt
 name: "Globe Plug 4 Power"
 state_topic: "stat/globeplug4/POWER"
 icon: mdi:power-socket-us
+availability_topic: "tele/globeplug4/LWT"
+payload_available: "Online"
+payload_not_available: "Offline"
