--- a/entities/sensors/mqtt/plugs/globe_plug_5_power.yaml
+++ b/entities/sensors/mqtt/plugs/globe_plug_5_power.yaml
@@ -4,3 +4,6 @@ platform: mqtt
 name: "Globe Plug 5 Power"
 state_topic: "stat/globeplug5/POWER"
 icon: mdi:power-socket-us
+availability_topic: "tele/globeplug5/LWT"
+payload_available: "Online"
+payload_not_available: "Offline"
