--- a/lovelace/views/03_system.yaml
+++ b/lovelace/views/03_system.yaml
@@ -13,12 +13,14 @@
           - ../includes/section.yaml
           - title: "Media Server"
         - type: custom:decluttering-card
-          template: mini_graph_power
+          template: mini_graph
           variables:
             - entity_id: sensor.media_server_cost_daily
             - name: Media Server Cost Daily
             - color: '#b11df5'
             - hours: 168
+            - group_by: date
+            - graph_type: bar
         - type: entities
           entities:
             - entity: sensor.media_server_cost_weekly
