--- a/lovelace/views/04_printer.yaml
+++ b/lovelace/views/04_printer.yaml
@@ -34,12 +34,14 @@
           - ../includes/section.yaml
           - title: "Printer Cost To Run"
         - type: custom:decluttering-card
-          template: mini_graph_power
+          template: mini_graph
           variables:
             - entity_id: sensor.printer_cost_daily
             - name: Printer Cost Daily
             - color: '#b11df5'
             - hours: 168
+            - group_by: date
+            - graph_type: bar
         - type: entities
           entities:
             - entity: sensor.printer_cost_weekly
