--- a/.stubs/secrets_CI.yaml
+++ b/.stubs/secrets_CI.yaml
@@ -33,3 +33,10 @@ google_cal_client_secret: secret token
 octoprint_api_key: api_key
 
 pi_hole_api_key: api_key
+
+plex_api_token: token
+sonarr_api_token: api_key
+radarr_api_token: api_key
+
+qbittorrent_username: username
+qbittorrent_password: password
