--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -2,3 +2,5 @@
 # Sets up Home Assistant.
 #
 homeassistant:
+  customize: !include_dir_merge_named ../customizations/entities
+  customize_glob: !include_dir_merge_named ../customizations/globs
