--- a/lovelace/decluttering_templates/hk_button.yaml
+++ b/lovelace/decluttering_templates/hk_button.yaml
@@ -1,11 +1,13 @@
 hk_button:
   default:
     - aspect_ratio: "1/1"
+    - show_entity_picture: false
   card:
     type: custom:button-card
     entity: '[[entity_id]]'
     name: "[[name]]"
     show_state: true
+    show_entity_picture: "[[show_entity_picture]]"
     aspect_ratio: "[[aspect_ratio]]"
     hold_action:
       action: more-info
