--- a/lovelace/resources/resources.yaml
+++ b/lovelace/resources/resources.yaml
@@ -22,3 +22,5 @@
   type: module
 - url: /hacsfiles/decluttering-card/decluttering-card.js
   type: module
+- url: /local/custom-lovelace/upcoming-media-card/upcoming-media-card.js?v=0.4.3
+  type: js
